# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "unspecified-encoding",
  "line-too-long",
  "too-many-branches",
  "too-many-lines",
  "too-many-statements",
  "too-many-instance-attributes",
  "too-many-arguments",
  "too-many-locals",
  "too-few-public-methods",
  "invalid-name",
  "pointless-string-statement",
  "cyclic-import",
]
enable = [
  "useless-suppression",
  "use-symbolic-message-instead",
]

[tool.pylint.CLASSES]
defining-attr-methods = [
  "__init__",
  "__new__",
  "setUp",
  "__post_init__",
  "initialize",
  "__array_finalize__",
  "setup_class", "setup_method",  # for tests
]

[tool.pylint.FORMAT]
max-line-length = 132

[tool.codespell]
skip = ".git,*docs/build"
ignore-words-list = "pres"
